--- a/xs-solr/pom.xml
+++ b/xs-solr/pom.xml
@@ -1,39 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>xiushang-boot</artifactId>
         <groupId>com.github.shijingsh</groupId>
         <version>1.4.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.github.shijingsh</groupId>
-    <artifactId>xs-service</artifactId>
+    <artifactId>xs-solr</artifactId>
     <version>1.4.2</version>
     <packaging>jar</packaging>
+    <name>xs-solr</name>
+    <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <quartz.version>2.3.2</quartz.version>
     </properties>
-
     <dependencies>
+        <!-- solr -->
         <dependency>
-            <groupId>com.github.shijingsh</groupId>
-            <artifactId>xs-core</artifactId>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.12</version>
         </dependency>
         <dependency>
-            <groupId>com.github.shijingsh</groupId>
-            <artifactId>xs-entity</artifactId>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+            <version>8.5.1</version>
         </dependency>
-    </dependencies>
 
-    <build>
-        <finalName>xs-service</finalName>
-        <defaultGoal>compile</defaultGoal>
-    </build>
+    </dependencies>
 
 </project>
