--- a/xs-entity/pom.xml
+++ b/xs-entity/pom.xml
@@ -18,12 +18,12 @@
     </properties>
 
     <dependencies>
+        <!--Spring boot security-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
-
 
         <!--Spring boot jpa-->
         <dependency>
@@ -48,32 +48,6 @@
             <version>${querydsl.version}</version>
         </dependency>
 
-        <!--alibaba's json-->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.78</version>
-        </dependency>
-
-        <!-- knife4j 接口文档  -->
-        <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-spring-boot-starter</artifactId>
-            <version>${knife4j.version}</version>
-            <exclusions>
-                <!-- 排除版本冲突的swagger-annotations -->
-                <exclusion>
-                    <artifactId>swagger-annotations</artifactId>
-                    <groupId>io.swagger</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <!-- 重新引入指定版本的swagger-annotations -->
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>${knife4j.annotations.version}</version>
-        </dependency>
 
     </dependencies>
     <build>
