--- a/xs-marketing/pom.xml
+++ b/xs-marketing/pom.xml
@@ -18,18 +18,23 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
-        <!-- xs基础服务-->
-        <dependency>
-            <groupId>com.github.shijingsh</groupId>
-            <artifactId>xs-service</artifactId>
-            <version>1.4.2</version>
-            <scope>compile</scope>
-        </dependency>
 
         <dependency>
             <groupId>com.tencent.ads</groupId>
             <artifactId>marketing-api-java-sdk</artifactId>
-            <version>1.1.29</version>
+            <version>${tencent.marketing.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.10.0</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
