--- a/xiushang-boot-example/example-entity/pom.xml
+++ b/xiushang-boot-example/example-entity/pom.xml
@@ -12,7 +12,19 @@
     <name>${project.artifactId}</name>
     <description>entity模块</description>
     <dependencies>
-
+        <!-- xiushang框架依赖 -->
+        <dependency>
+            <groupId>com.github.shijingsh</groupId>
+            <artifactId>xs-core</artifactId>
+            <version>1.4.2</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.github.shijingsh</groupId>
+            <artifactId>xs-entity</artifactId>
+            <version>1.4.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
