--- a/xs-entity/pom.xml
+++ b/xs-entity/pom.xml
@@ -54,6 +54,7 @@
         <finalName>xs-entity</finalName>
         <defaultGoal>compile</defaultGoal>
         <plugins>
+            <!-- query dsl 自动生成相应的查询类-->
             <plugin>
                 <groupId>com.mysema.maven</groupId>
                 <artifactId>apt-maven-plugin</artifactId>
