--- a/xiushang-boot-example/example-admin/src/main/resources/application-uat.yml
+++ b/xiushang-boot-example/example-admin/src/main/resources/application-uat.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     username: proxy1
     password: proxy1
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.29.11:3306/mg_xiushang?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT%2b8
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
