--- a/xiushang-boot-example/example-admin/pom.xml
+++ b/xiushang-boot-example/example-admin/pom.xml
@@ -28,8 +28,7 @@
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>xs-common</artifactId>
-            <version>1.4.4</version>
-            <type>jar</type>
+            <version>${xiushang.version}</version>
         </dependency>
 
     </dependencies>
