--- a/xiushang-boot-example/example-dubbo-provider/pom.xml
+++ b/xiushang-boot-example/example-dubbo-provider/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>xs-dubbo</artifactId>
-            <version>1.4.4</version>
+            <version>${xiushang.version}</version>
         </dependency>
     </dependencies>
 
