--- a/xiushang-boot-example/example-job/pom.xml
+++ b/xiushang-boot-example/example-job/pom.xml
@@ -22,8 +22,7 @@
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>xs-job</artifactId>
-            <version>1.0.0</version>
-            <type>jar</type>
+            <version>${xiushang.version}</version>
         </dependency>
     </dependencies>
 
