--- a/xiushang-boot-example/example-service/pom.xml
+++ b/xiushang-boot-example/example-service/pom.xml
@@ -16,8 +16,7 @@
         <dependency>
             <groupId>com.github.shijingsh</groupId>
             <artifactId>xs-service</artifactId>
-            <version>1.4.4</version>
-            <type>jar</type>
+            <version>${xiushang.version}</version>
         </dependency>
 
         <dependency>
