--- a/xiushang-boot-example/example-admin/src/main/resources/application-uat.yml
+++ b/xiushang-boot-example/example-admin/src/main/resources/application-uat.yml
@@ -1,7 +1,5 @@
 # 开发环境配置
 spring:
-  thymeleaf:
-    cache: false
   datasource:
     username: proxy1
     password: proxy1
@@ -46,17 +44,7 @@ spring:
         min-idle: 0 # 连接池中的最小空闲连接
     timeout: 3000ms # 连接超时时间（毫秒
 
+# 文件上传目录
 file:
-  #文件上传目录 绝对路径 末尾请加 /
-  #path: D:/files/ #windows
-  path: /data/amy-xiushang/file/ #linux
-  #文件预览、下载的url, 末尾请勿加 /
-  url: https://xiushang.365me.me/files
+  temppath: /data/images
 
-knife4j:
-  basic:
-    enable: true
-    username: amy-xiushang-knife
-    password: amy-xiushang-knife-pwd
-
-temppath: /data/images
