--- a/xiushang-boot-example/example-admin/src/main/resources/application-stg.yml
+++ b/xiushang-boot-example/example-admin/src/main/resources/application-stg.yml
@@ -1,8 +1,5 @@
 # 开发环境配置
 spring:
-  thymeleaf:
-    cache: false
-    prefix: classpath:/templates/
   datasource:
     username: proxy1
     password: proxy1
@@ -47,15 +44,6 @@ spring:
         min-idle: 0 # 连接池中的最小空闲连接
     timeout: 3000ms # 连接超时时间（毫秒
 
+# 文件上传目录
 file:
-  #文件上传目录 绝对路径 末尾请加 /
-  #path: D:/files/ #windows
-  path: /data/amy-xiushang/file/ #linux
-  #文件预览、下载的url, 末尾请勿加 /
-  url: https://xiushang.365me.cn/files
-
-#knife4j:
-  #  production: false   # 是否开启生产环境屏蔽
-    #  basic:
-#    enable: true
-temppath: /data/images
+  temppath: /data/images
