--- a/xiushang-boot-example/example-rocketmq/src/main/resources/application-uat.yml
+++ b/xiushang-boot-example/example-rocketmq/src/main/resources/application-uat.yml
@@ -46,4 +46,6 @@ spring:
         min-idle: 0 # 连接池中的最小空闲连接
     timeout: 3000ms # 连接超时时间（毫秒
 
-temppath: /data/images
+# 文件上传目录
+file:
+  temppath: /data/images
