--- a/xs-jwt-security/pom.xml
+++ b/xs-jwt-security/pom.xml
@@ -25,25 +25,26 @@
             <artifactId>xs-service</artifactId>
         </dependency>
 
-        <!-- spring-security-->
+        <!-- OAuth2 认证服务器-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
-        <!-- OAuth2-->
+        <!--
         <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>2.3.5.RELEASE</version>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
         </dependency>
+        -->
+
         <!-- jjwt-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-jwt</artifactId>
             <version>1.1.0.RELEASE</version>
         </dependency>
-
+        -->
         <!-- BCrypt 加密 -->
         <dependency>
             <groupId>org.springframework.security</groupId>
