--- a/xs-entity/pom.xml
+++ b/xs-entity/pom.xml
@@ -55,6 +55,13 @@
             <version>1.4.4</version>
         </dependency>
 
+        <!-- validation -->
+        <dependency>
+            <groupId>com.github.shijingsh</groupId>
+            <artifactId>xs-validation</artifactId>
+            <version>1.4.4</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>xs-entity</finalName>
