--- a/xs-validation/pom.xml
+++ b/xs-validation/pom.xml
@@ -25,6 +25,13 @@
             <version>${spring.boot.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
