--- a/xs-oauth/pom.xml
+++ b/xs-oauth/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.shijingsh</groupId>
-    <artifactId>xs-jwt-security</artifactId>
+    <artifactId>xs-oauth</artifactId>
     <version>1.5.0</version>
     <packaging>jar</packaging>
     <properties>
