--- a/xs-common/pom.xml
+++ b/xs-common/pom.xml
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.shijingsh</groupId>
-            <artifactId>xs-jwt-security</artifactId>
+            <artifactId>xs-oauth</artifactId>
             <version>1.5.1</version>
         </dependency>
 
