--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,20 @@
                 <artifactId>xs-solr</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <!-- Apache Log4j2 远程代码执行漏洞 -->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>2.17.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.17.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
