--- a/xs-service/pom.xml
+++ b/xs-service/pom.xml
@@ -29,6 +29,12 @@
             <groupId>com.github.shijingsh</groupId>
             <artifactId>xs-entity</artifactId>
         </dependency>
+        <!-- mapstruct -->
+        <dependency>
+            <groupId>com.github.shijingsh</groupId>
+            <artifactId>xs-mapstruct</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
