--- a/xiushang-boot-example/example-job/src/main/resources/application.yml
+++ b/xiushang-boot-example/example-job/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
         userToken: 604800 # 7天 7*24*3600
         passwordError: 3600 # 一个小时
         permissionRefresh: 604800 # 7天 7*24*3600
-    allowMultipleLogin: true # 允许多处登陆
+    allowMultipleLogin: true # 允许多处登录
   jpa:
     properties:
       hibernate:
