--- a/xiushang-boot-example/example-web/src/manifest.json
+++ b/xiushang-boot-example/example-web/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ant Design Pro",
-  "short_name": "Ant Design Pro",
+  "name": "秀上-智慧数据运营平台",
+  "short_name": "秀上",
   "display": "standalone",
   "start_url": "./?utm_source=homescreen",
   "theme_color": "#002140",
