--- a/xiushang-boot-example/example-web/package.json
+++ b/xiushang-boot-example/example-web/package.json
@@ -64,6 +64,7 @@
     "react-dev-inspector": "^1.7.0",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.2.0",
+    "numeral": "^2.0.6",
     "umi": "^3.5.0"
   },
   "devDependencies": {
