--- a/xiushang-boot-example/example-web/package.json
+++ b/xiushang-boot-example/example-web/package.json
@@ -47,6 +47,7 @@
     "not ie <= 10"
   ],
   "dependencies": {
+    "@tinymce/tinymce-react": "^3.6.0",
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-descriptions": "^1.10.0",
     "@ant-design/pro-form": "^1.52.0",
