--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>com.github.shijingsh</groupId>
     <artifactId>xiushang-boot</artifactId>
-    <version>1.5.3</version>
+    <version>1.5.4</version>
     <modules>
         <module>xiushang-boot-example</module>
         <module>xs-core</module>
@@ -24,6 +24,7 @@
         <module>xs-pay</module>
         <module>xs-mapstruct</module>
         <module>xs-validation</module>
+        <module>xs-redis</module>
     </modules>
     <packaging>pom</packaging>
     <name>xiushang-boot</name>
