--- a/xs-redis/pom.xml
+++ b/xs-redis/pom.xml
@@ -7,29 +7,32 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.shijingsh</groupId>
-    <artifactId>xs-solr</artifactId>
+    <artifactId>xs-redis</artifactId>
     <version>1.5.4</version>
     <packaging>jar</packaging>
-    <name>xs-solr</name>
+    <name>xs-redis</name>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
+
     <dependencies>
-        <!-- solr -->
+        <!--Spring boot Redis-->
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.12</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>${spring.boot.version}</version>
         </dependency>
+        <!--spring boot 集成redis所需common-pool2-->
         <dependency>
-            <groupId>org.apache.solr</groupId>
-            <artifactId>solr-solrj</artifactId>
-            <version>8.5.1</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>${commons-pool2.version}</version>
         </dependency>
 
     </dependencies>
+
 
 </project>
