--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>xiushang-boot-example</module>
         <module>xs-core</module>
+        <module>xs-framework</module>
         <module>xs-entity</module>
         <module>xs-common</module>
         <module>xs-service</module>
